<?xml version="1.0"?>
<package format="2">
  <name>multicontact_locomotion_planner</name>
  <version>0.0.0</version>
  <description>The multicontact_locomotion_planner package</description>

  <maintainer email="hiraoka@jsk.imi.i.u-tokyo.ac.jp">Naoki-Hiraoka</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>ompl</depend>
  <depend>choreonoid</depend>
  <depend>ik_constraint2</depend>
  <depend>ik_constraint2_distance_field</depend>
  <depend>ik_constraint2_vclip</depend>
  <depend>ik_constraint2_bullet</depend>
  <depend>choreonoid_cddlib</depend>
  <depend>ik_constraint2_region_cdd</depend>
  <depend>prioritized_inverse_kinematics_solver2</depend>
  <depend>choreonoid_viewer</depend>
  <depend>convex_polyhedron_intersection</depend>
  <depend>moveit_core</depend>
  <depend>choreonoid_qhull</depend>
  <depend>global_inverse_kinematics_solver</depend>
  <depend>scfr_solver</depend>
  <depend>bulleteigen</depend>
</package>
