<?xml version="1.0"?>
<package format="2">
  <name>multicontact_locomotion_planner_sample</name>
  <version>0.0.0</version>
  <description>The multicontact_locomotion_planner_sample package</description>

  <maintainer email="hiraoka@jsk.imi.i.u-tokyo.ac.jp">Naoki-Hiraoka</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>multicontact_locomotion_planner</depend>
  <depend>choreonoid_viewer</depend>
  <depend>global_inverse_kinematics_solver_sample</depend>

</package>
