<?xml version="1.0"?>
<package format="2">
  <name>rb_rrt_solver</name>
  <version>0.0.0</version>
  <description>The rb_rrt_solver package</description>

  <maintainer email="hiraoka@jsk.imi.i.u-tokyo.ac.jp">Naoki-Hiraoka</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>ompl</depend>
  <depend>choreonoid</depend>
  <depend>ik_constraint2</depend>
  <depend>choreonoid_viewer</depend>
</package>
